[package]
name = "impr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
clap-num = "1.0.2"
image = "0.24.7"
itertools = "0.12.0"
num-traits = "0.2.17"
